<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addNewTaskActicity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNewTaskActivity">


    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="727dp"-->
    <!--        android:layout_height="62dp"-->
    <!--        android:autoText="false"-->
    <!--        android:background="#1f6f78"-->
    <!--        android:fontFamily="casual"-->
    <!--        android:text="@string/task_master"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
    <!--        android:textSize="48sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:ignore="Deprecated,MissingConstraints,TextViewEdits" />-->


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/taskTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/taskDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="task description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/startDateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleText"
        app:layout_constraintVertical_bias="0.516"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveToDBButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button"
        android:text="Add Task"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home" />


    <Button
        android:id="@+id/startDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="End date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="115dp"
        android:layout_height="33dp"
        android:text="Select State"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="33dp"
        android:text="Select Team"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spinner3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.795" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="335dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/saveToDBButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateButton"
        app:layout_constraintVertical_bias="0.554" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_marginBottom="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pickImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="pick image"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateButton"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/taskImage"
        android:layout_width="193dp"
        android:layout_height="183dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toEndOf="@+id/pickImageButton"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionText"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
