<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:textAlignment="center"
    tools:context=".activity.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/usertasks"
        android:layout_width="333dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:fontFamily="casual"
        android:text="@string/my_tasks"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/userProfile"
        android:layout_width="72dp"
        android:layout_height="69dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRV"
        android:layout_width="403dp"
        android:layout_height="301dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usertasks"
        app:layout_constraintVertical_bias="0.277"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/allTasksButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="#FFFFFF"
            android:text="@string/all_tasks"
            android:textColor="#FFFFFF"
            android:textColorHighlight="@color/black"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/custom_button"
            android:paddingLeft="4px"
            android:paddingRight="4px"
            android:text="@string/add_new_task"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allTasksButton"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <TextView
        android:id="@+id/team_home"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/usertasks"
        app:layout_constraintEnd_toStartOf="@+id/userProfile"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <TextView
        android:id="@+id/userNicknameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="76dp"
        android:text="user email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/productListLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="LOG IN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/productListLogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="LOG OUT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>