<resources>
    <string name="app_name">Task Master</string>
    <string name="task_master">Task Master</string>
    <string name="add_new_task">Add new Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
    <string name="all_tasks">All Tasks</string>
    <string name="task_title">task title</string>
    <string name="task_title_detailPage">Do English assignment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada nibh sit amet massa fermentum, eget consequat sapien malesuada.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank Task</string>
    <string name="task_master_toolbar">Task Master</string>
</resources>